--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>CST252 Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
-	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
-	</main>
 
+	<main>
+
+ 		<h1> Raeann Anaya</h1>
+ 		 <img src="img/myphoto.jpg" width="350">
+ 		<p> Hello, my name is Raeann Anaya. I am 22 years old, I was born in Grand
+ 			Junction, Colorado but grew up in Merced, California. I am a movie buff, I could sit
+ 			in front of the tv for hours. So much so that I want to get a career in
+ 			the movie business at Pixar in hoping to create animation mvoies for them
+ 			one day. I also love to play Sudoku, I refuse to play a game if it is not
+ 			extremely difficult, I have been playing it for as long as I can remember.
+ 			Fun fact, I actully won the Dominoes tournament at CSUMB. I also have an
+ 			Associates Degree in Studio Art and in Art History. </p>
+
+ 		 <div class="assignments major-section">
+ 			<h2>Labs</h2>
+ 			<ul>
+
+ 				<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
+ 				<li><a href="lab3/index.html"> Lab 3: File Structure & FIle Transfer </a></li>
+				<li><a ref="lab4/index.html">Lab 4:</a></LI>
+				<li><a href="lab5/index.html">Lab 5:</a></li>
+
+ 		 </ul>
+
+
+ 		<p></p>
+ 	</main>
 
 </body>
 </html>
