--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2: HTML & CSS Refresher</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prata">
 </head>
 <body>
+	<div id= "content">
+	<h1> Hello World </h1>
+
+	<h2> Raeann Anaya </h2>
+		<p> Hello, I am Raeann Anaya and I'm a senior here at CSUMB. I transferred here with two
+			AA degrees in Studio Art and in Art History. I initially got into CSUMB to
+		study Cinema Arts and Technology but had to switch to Communication Design to be
+		more hands on with computers. </p>
+
+		<h3> Matthew Lencioni </h3>
+
+			<p> Howdy y'all! My name is Matthew, and I am a 4th year transfer student
+				from Santa Clara, CA. I took CST251 last semseter, so I am semi-familiar
+				with Html & Css, but I am completely new to JavaScript.I am eager to see
+				where this class will take my design! My hobbies include: Photography,
+				Karaoke, and Hammocking.</p>
+
+			</div>
+
 
 </body>
 </html>
