--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3: File Structure & File Transfer</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prata">
 </head>
 <body>
 
+
+	<h1> Lab 3: FIle Structure & File Trasnfer </h1>
+	<p>  In lab 3, we are creating a file structure and adding index.html files,
+		then uploading it to servers.</p>
+
+	<h2> Challenges </h2>
+	<p> This lab was fairly easy for me, it was just a challenge to remember how to
+	add in the images links.</p>
+
+	<h3> Results </h3>
+	<p> Everything was successful, ran into no errors and i am happy with the results.</p>
+
+ <img src="img/homepage.jpg" width="650">
+ <img src="img/files.png" width="650">
+
+<nav>
+           <ul>
+             <li><a href="../index.html">CST252 Homepage</a></li>
 </body>
 </html>
