--- a/lab3/index.html
+++ b/lab3/index.html
@@ -22,6 +22,7 @@
 
  <img src="img/homepage.jpg" width="650">
  <img src="img/files.png" width="650">
+ <img src="img/lab3.png" width="650">
 
 <nav>
            <ul>
