--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<main>
 
  		<h1> Raeann Anaya</h1>
- 		 <img src="img/myphoto.jpg" width="350">
+ 		 <img src="img/smigal.jpg" width="350">
  		<p> Hello, my name is Raeann Anaya. I am 22 years old, I was born in Grand
  			Junction, Colorado but grew up in Merced, California. I am a movie buff, I could sit
  			in front of the tv for hours. So much so that I want to get a career in
