--- a/index.html
+++ b/index.html
@@ -3,35 +3,48 @@
 <head>
 	<title>CST252 Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Uchen">
 </head>
 <body>
 
 	<main>
-
+<div class="header">
  		<h1> Raeann Anaya</h1>
- 		 <img src="img/smigal.jpg" width="350">
+	</div>
+
+<div class="row">
+	<div class="col-3 menu">
+		<ul>
+			<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
+			<li><a href="lab3/index.html"> Lab 3: File Structure & FIle Transfer </a></li>
+			<li><a href="lab4/index.html">Lab 4:</a></li>
+			<li><a href="lab5/index.html">Lab 5:</a></li>
+		</div>
+
+	 <div class="col-6">
  		<p> Hello, my name is Raeann Anaya. I am 22 years old, I was born in Grand
- 			Junction, Colorado but grew up in Merced, California. I am a movie buff, I could sit
- 			in front of the tv for hours. So much so that I want to get a career in
- 			the movie business at Pixar in hoping to create animation mvoies for them
- 			one day. I also love to play Sudoku, I refuse to play a game if it is not
- 			extremely difficult, I have been playing it for as long as I can remember.
- 			Fun fact, I actully won the Dominoes tournament at CSUMB. I also have an
- 			Associates Degree in Studio Art and in Art History. </p>
+ 			Junction, Colorado but grew up in Merced, California. I am a movie buff, I
+			could sit in front of the tv for hours. So much so that I want to abtain a
+			career in the movie business in hopes of creating animation mvoies or video
+			game settings for varies companies one day. I also love to play Sudoku, I
+			refuse to play a game if it is not extremely difficult, I have been playing
+			it for as long as I can remember. Fun fact, I actully won the Dominoes
+			tournament my first year at CSUMB. I also have an Associates Degree in
+			Studio Art and in Art History. </p>
+		</div>
 
- 		 <div class="assignments major-section">
- 			<h2>Labs</h2>
- 			<ul>
+		<div class="col-3 right">
+			<div class="aside">
+				<img src="img/myphoto.jpg" width="220">
+			</div>
+		</div>
 
- 				<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
- 				<li><a href="lab3/index.html"> Lab 3: File Structure & FIle Transfer </a></li>
-				<li><a ref="lab4/index.html">Lab 4:</a></LI>
-				<li><a href="lab5/index.html">Lab 5:</a></li>
+	</div>
 
- 		 </ul>
+ 		 <div class="footer">
+ 		<h3> CST252 </h3>
+		</div>
 
-
- 		<p></p>
  	</main>
 
 </body>
