--- a/lab3/index.html
+++ b/lab3/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-	<h1> Lab 3: FIle Structure & File Trasnfer </h1>
+	<h1> Lab 3: File Structure & File Transfer </h1>
 	<p>  In lab 3, we are creating a file structure and adding index.html files,
 		then uploading it to servers.</p>
 
@@ -20,7 +20,7 @@
 	<h3> Results </h3>
 	<p> Everything was successful, ran into no errors and i am happy with the results.</p>
 
- <img src="img/homepage.jpg" width="650">
+ <img src="img/homepage.png" width="650">
  <img src="img/files.png" width="650">
  <img src="img/lab3.png" width="650">
 
