--- a/index.html
+++ b/index.html
@@ -16,9 +16,26 @@
 	<div class="col-3 menu">
 		<ul>
 			<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
-			<li><a href="lab3/index.html"> Lab 3: File Structure & FIle Transfer </a></li>
-			<li><a href="lab4/index.html">Lab 4:</a></li>
-			<li><a href="lab5/index.html">Lab 5:</a></li>
+			<li><a href="lab3/index.html"> Lab 3: File Structure & File Transfer </a></li>
+			<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
+			<li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
+			<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+			<li><a href="lab7/index.html">Lab 7: Functions</a></li>
+			<li><a href="lab8/index.html">Lab 8: Anon Functions and Callbacks</a></li>
+			<li><a href="lab9/index.html">Lab 9: JavaScript for the Web</a></li>
+			<li><a href="lab10/index.html">Lab 10: JavaScript Events and Forms</a></li>
+			<li><a href="lab11/index.html">Lab 11: Libraries & Intro to jQuery</a></li>
+			<li><a href="lab12/index.html">Lab 12: Advanced jQuery</a></li>
+			<li><a href="lab13/index.html">Lab 13: Conditionals</a></li>
+			<li><a href="lab14/index.html">Lab 14: Loops</a></li>
+			<li><a href="lab15/index.html">Lab 15: Basic Debugging</a></li>
+			<li><a href="lab16/index.html">Lab 16: JavaScript Classes and Objects</a></li>
+			<li><a href="lab17/index.html">Lab 17: Object-Oriented Design</a></li>
+			<li><a href="lab18/index.html">Lab 18: Libraries and Frameworks 1</a></li>
+			<li><a href="lab19/index.html">Lab 19: AJAX</a></li>
+			<li><a href="lab20/index.html">Lab 20: JSON and APIs</a></li>
+			<li><a href="lab21/index.html">Lab 21: Git and Github for Groups</a></li>
+		</ul>
 		</div>
 
 	 <div class="col-6">
