--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 4 - Pseudocoding and Problem-solving </title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/js" href="js/lab.js">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 </head>
 <body>
+	<h1> Lab 4: Pseudocoding and Problem-Solving </h1>
+	<p> Learing how to pseudocode before coding.</p>
+
+			<h1> Challenges </h1>
+			<p> The biggest challenge for me is that I wasn't sure if I was writing
+				the pseudocode right. It was a bit confusing as to how to word the game we
+			  were breaking down into steps using the pseudocoding.</p>
+
+			<h1> Problems </h1>
+			<p> The only problem I had was the terminalogy I was suppose to use when
+					breaking down the game and if I was suppose to add the pseudocode steps
+					to the top of every step.</p>
+
+			<h1> Results </h1>
+			<p> I honestly don't know if I did any of it right but it looks right to me.</p>
+
+	<h3> How to make pasta. </h3>
+
+		<ol>
+			<li> Boil a pot of water at medium high temp. </li>
+			<li> Put a pinch of salt into the boiling water. </li>
+			<li> Use a box of Penne pasta. </li>
+			<li> Let it boil for 10 minuets. </li>
+			<li> While the pasta is boiling, make the tamato sauce </li>
+			<li> In a saute pan add oil, one cut of garlic, and dices of onion. When
+				the garlic and onion brown, use a whole can of crushed tomato. Then add the whole
+				can of tomato sauce. When that starts to boil, add a half can of tomato paste.
+			  Start to add a little bit of salt, Italiana spice, Oregino, and sugar to the sauce. </li>
+		  <li> Let the sauce sit for 2 minutes. While it's sitting, check on the pasta. </li>
+			<li> After straining the pasta of any excess water. Enjoy a bowl of Penne patsa
+				with homemade tomato sauce </li>
+		</ol>
+
+	<h3> Creating a Hangman game: </h3>
+
+		<ol>
+			<li> Make the board before each game </li>
+			<li> Accept user input </li>
+			<li> Evaluate the users chosen letter </li>
+			<li> Evaluate the hidden name </li>
+			<li> Choose computer move </li>
+			<li> Test of win or lose condition </li>
+		</ol>
+
+		<pre>
+			//Make the board before every game
+			  //Loop through every letter in the name
+			    // Write correct letter on space
+			    // Draw each body part for wrong letter
+			  //Make new line spaces for new name
+			  //Make arch for the body
+			</pre>
+
+			<nav>
+			           <ul>
+			             <li><a href="../index.html">CST252 Homepage</a></li>
+								 </nav>
+
+
+
 
 </body>
 </html>
