--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 </head>
 <body>
+
+	<div id="content">
+
+		<h1> Lab 5: Data Types and Variables </h1>
+			<p> Experimenting with JavaScript with a partner. </p>
+
+		<h3> Challenges </h3>
+			<p></p>
+
+		<h3> Problems </h3>
+			<p></p>
+
+		<h3> Results </h3>
+			<p></p>
+
+		<div>
+		 <h4> Script Output </h4>
+		 <script src="js/lab.js"></script>
+	 </div>
+
+		</div>
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
