--- a/lab2/index.html
+++ b/lab2/index.html
@@ -24,6 +24,11 @@
 				where this class will take my design! My hobbies include: Photography,
 				Karaoke, and Hammocking.</p>
 
+				<nav>
+				           <ul>
+				             <li><a href="../index.html">CST252 Homepage</a></li>
+									 </nav>
+
 			</div>
 
 
