--- a/lab5/index.html
+++ b/lab5/index.html
@@ -9,24 +9,32 @@
 
 	<div id="content">
 
+		<img src="img/car.jpg">
+
 		<h1> Lab 5: Data Types and Variables </h1>
 			<p> Experimenting with JavaScript with a partner. </p>
 
 		<h3> Challenges </h3>
-			<p></p>
+			<p> I faced zero challenges with this lab.</p>
 
 		<h3> Problems </h3>
-			<p></p>
+			<p> The only problems I faced was typing in the console, I would word
+			something wrong and have t type the sentence over again.</p>
 
 		<h3> Results </h3>
-			<p></p>
+			<p> The lab was successful, I had to issues uploading it or linking in my alt="HTML."</p>
 
 		<div>
 		 <h4> Script Output </h4>
 		 <script src="js/lab.js"></script>
-	 </div>
+	  </div>
 
-		</div>
+		<nav>
+		           <ul>
+		             <li><a href="../index.html">CST252 Homepage</a></li>
+							 </nav>
+
+	</div>
 
 
 
