--- a/lab5/index.html
+++ b/lab5/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
 </head>
 <body>
 
