--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 6: Arrys and Objects</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
 </head>
 <body>
+
+<div id="content">
+
+		<img src="img/car.jpg">
+
+	<h1> Lab 6: Arrays and Objects</h1>
+	<p></p>
+
+	<h3> Challenges</h3>
+	<p>I had a few challenges typing correcting in the JavaScript Console and making
+	everything work properly. I did run into an issue of the code not showing up
+	on the website but fixed it right away.</p>
+
+	<h3>Problems</h3>
+	<p>I didn't have too many problems I wasn't able to fix in a timely manner.</p>
+
+	<h3>Results</h3>
+		<p>Everything worked perfectly and showed up correctly on the website.</p>
+
+	<div>
+	<h3> Script Output </h3>
+	 <script src="js/lab.js"></script>
+	</div>
+
+	<nav>
+						 <ul>
+							 <li><a href="../index.html">CST252 Homepage</a></li>
+						 </nav>
+</div>
+
+
+
 
 </body>
 </html>
