--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
+    <meta>
     <title>Lab 7: Functions</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
