--- a/lab9/index.html
+++ b/lab9/index.html
@@ -9,22 +9,24 @@
 
     <div id="outputEl">
 
-      <h1>Lab 9: Javascript for the Web</h1>
-      <p></p>
+      <h1 id="h1">Lab 9: Javascript for the Web</h1>
+      <p>Working with your partner</p>
 
       <h3>Challenges</h3>
-      <p></p>
+      <p>There were a few challenges in this lab by getting the button to show up
+      on the webpage and changing the color of the text through JavaScript.</p>
 
       <h3>Problems</h3>
-      <p></p>
+      <p>There were really any problems we didn't overcome in this lab.</p>
 
       <h3>Results</h3>
-      <p></p>
+      <p>This lab was very successful.</p>
 
       <nav>
          <ul>
            <li><a href="../index.html">CST252 Homepage</a></li>
          </nav>
+
      </div>
 
   </body>
