--- a/lab10/index.html
+++ b/lab10/index.html
@@ -15,7 +15,7 @@
 
       <h2 id="greet">Howdy!</h2>
 
-Name: <input type=text id=input>
+<p>Name: <input type=text id=input>
 </p>
 
 <button id="my-button">Press me!</button>
