--- a/lab12/index.html
+++ b/lab12/index.html
@@ -15,45 +15,28 @@
       <p>Experimenting with jQuery with a partner.</p>
 
       <h3>Challenges</h3>
-      <p></p>
+      <p>This lab was challenging while following along in class but it
+      somehow worked on my end and not on the website we were using in class.</p>
 
       <h3>Problems</h3>
-      <p></p>
+      <p>I ran into no problems with this lab since I followed along to the one
+      that was done in class.</p>
 
       <h3>Results</h3>
-      <p></p>
+      <p>Everything came out successful in the browser.</p>
 
-      <div id="input">
-              Where should we stop? <input type="number" min="0" max="1000" id="max"><br>
-              Which factors should print what?<br>
-              <table>
-                  <tbody><tr>
-                      <th>Factor</th>
-                      <th>Prints what?</th>
-                  </tr>
-                  <tr>
-                      <td><input type="number" min="0" max="23" id="num0"></td>
-                      <td><input type="text" id="text0"></td>
-                  </tr>
-                  <tr>
-                      <td><input type="number" min="0" max="23" id="num1"></td>
-                      <td><input type="text" id="text1"></td>
-                  </tr>
-                  <tr>
-                      <td><input type="number" min="0" max="23" id="num2"></td>
-                      <td><input type="text" id="text2"></td>
-                  </tr>
-                  <tr>
-                      <td><input type="number" min="0" max="23" id="num3"></td>
-                      <td><input type="text" id="text3"></td>
-                  </tr>
-              </tbody></table>
-              <button id="submit">Run</button>
-        </div>
+      <nav>
+         <ul>
+           <li><a href="../index.html">CST252 Homepage</a></li>
+         </nav>
 
-        <div id="output">
+<button id="btn-red">
+  <p>red</p>
+  </button>
 
-        </div>
+  <button id="btn-green">
+    <p>green</p>
+    </button>
 
       </div>
 
