--- a/lab12/index.html
+++ b/lab12/index.html
@@ -17,26 +17,24 @@
       <h3>Challenges</h3>
       <p>This lab was challenging while following along in class but it
       somehow worked on my end and not on the website we were using in class.</p>
-
+      <button id="btn-red">
+        <p>red</p>
+        </button>
       <h3>Problems</h3>
       <p>I ran into no problems with this lab since I followed along to the one
       that was done in class.</p>
-
+      <button id="btn-green">
+        <p>green</p>
+        </button>
       <h3>Results</h3>
       <p>Everything came out successful in the browser.</p>
-
+      <button id="btn-blue">
+        <p>blue</p>
+        </button>
       <nav>
          <ul>
            <li><a href="../index.html">CST252 Homepage</a></li>
          </nav>
-
-<button id="btn-red">
-  <p>red</p>
-  </button>
-
-  <button id="btn-green">
-    <p>green</p>
-    </button>
 
       </div>
 
