--- a/lab13/index.html
+++ b/lab13/index.html
@@ -31,9 +31,7 @@
 
   <input type="text"  id="input">
 
-  <button id="button"
-    <p>Submit</p>
-  </button>
+  <button id="button">Submit</button>
 
 <div id = "output">
   </div>
