--- a/lab13/index.html
+++ b/lab13/index.html
@@ -11,16 +11,17 @@
 <div id = "content">
 
   <h1>Lab 13: Conditionals</h1>
-  <p></p>
+  <p>Create functions that depends on conditionals with a partner</p>
 
   <h3>Challenges</h3>
-  <p></p>
+  <p>I had a few challenges with this lab, it was a bit confusng for me and the
+  class activity barely helped.</p>
 
   <h3>Problems</h3>
-  <p></p>
+  <p>The code that I put into JavaScript didn't seem to work in the end.</p>
 
   <h3>Results</h3>
-  <p></p>
+  <p>This lab was unseccessful and wasn't able to get my code to work.</p>
 
 <div class = "input-output">
 
