--- a/lab14/index.html
+++ b/lab14/index.html
@@ -27,7 +27,7 @@
               Where should we stop? <input type="number" min="0" max="1000" id="max"><br>
               Which factors should print what?<br>
               <table>
-                  <tbody><tr>
+                  <tr>
                       <th>Factor</th>
                       <th>Prints what?</th>
                   </tr>
@@ -47,14 +47,17 @@
                       <td><input type="number" min="0" max="23" id="num3"></td>
                       <td><input type="text" id="text3"></td>
                   </tr>
-              </tbody></table>
+              </table>
               <button id="submit">Run</button>
         </div>
 
         <div id="output">
 
         </div>
-
+            <div class = "Linkbox">
+              <a class = "homelink" href="../index.html">&lt,&lt; Homepage</a>
+              <a class = "sourcelink" href = "js/lab.js" target = "source">JavaScript Source &gt;&gt</a>
+            </div>
       </div>
 
   </body>
