--- a/lab14/index.html
+++ b/lab14/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta
-    <title>Lab 12: Advanced jQuery</title>
+    <title>Lab 14: Loops</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
     <script src="js/lab.js" defer></script>
@@ -11,17 +11,19 @@
 
     <div id="content">
 
-      <h1>Lab 12: Advanced jQUery</h1>
+      <h1>Lab 14: Loops</h1>
       <p>Experimenting with jQuery with a partner.</p>
 
       <h3>Challenges</h3>
-      <p></p>
+      <p>I had a bit of a challenge with this lab, there was an error in the console
+        that I couldn't figure out how to fix.</p>
 
       <h3>Problems</h3>
-      <p></p>
+      <p>The only problem that I faced was the action of the butto not showing
+        up on the website after clicking it.</p>
 
       <h3>Results</h3>
-      <p></p>
+      <p>This lab was not successful in the end.</p>
 
       <div id="input">
               Where should we stop? <input type="number" min="0" max="1000" id="max"><br>
