--- a/lab14/index.html
+++ b/lab14/index.html
@@ -23,7 +23,8 @@
         up on the website after clicking it.</p>
 
       <h3>Results</h3>
-      <p>This lab was not successful in the end.</p>
+      <p>When I uploaed the page into github the code actually started working
+        so everything was successful in the end.</p>
 
       <div id="input">
               Where should we stop? <input type="number" min="0" max="1000" id="max"><br>
