--- a/lab14/index.html
+++ b/lab14/index.html
@@ -23,7 +23,7 @@
         up on the website after clicking it.</p>
 
       <h3>Results</h3>
-      <p>When I uploaed the page into github the code actually started working
+      <p>When I uploaded the page into github the code actually started working
         so everything was successful in the end.</p>
 
       <div id="input">
