--- a/lab13/index.html
+++ b/lab13/index.html
@@ -23,21 +23,22 @@
   <h3>Results</h3>
   <p>This lab was unseccessful and wasn't able to get my code to work.</p>
 
-  <h3>Output</h3>
+<div class = "input-output">
 
-  <p>Display "Good day!" if the hour is less than 18:00:</p>
+  <h3>Welcome to Hogwarts</h3>
+  <p>Your assortment awaits you!</p>
+  Enter in you Full name:
 
-  <p id="w3">Good Evening!</p>
+  <input type="text"  id="input">
 
-  <script>
-  if (new Date().getHours() < 18) {
-    document.getElementById("w3").innerHTML = "Good day!";
-  }
-  </script>
+  <button id="button">Submit</button>
 
 <div id = "output">
   </div>
 
+<div class = "linkbox">
+  <a class = "sourcelink" href="js/lab.js" target="source">JavaScript Source &gt;&gt;</a>
+  </div>
   <nav>
      <ul>
        <li><a href="../index.html">CST252 Homepage</a></li>
