--- a/lab15/index.html
+++ b/lab15/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
   <head>
-    <meta charset="utf-8">
-    <title>Lab 15: Basic Debugging</title>
+    <meta
+    <title>Lab 13: Conditonals</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   </head>
   <body>
+
 <div id = "content">
 
-  <h1>Lab 15: Basic Debugging</h1>
-  <p>Working with a partner debugging old assignments</p>
+  <h1>Lab 13: Conditionals</h1>
+  <p>Create functions that depends on conditionals with a partner</p>
 
   <h3>Challenges</h3>
-  <p></p>
+  <p>I had a few challenges with this lab, it was a bit confusng for me and the
+  class activity barely helped.</p>
 
   <h3>Problems</h3>
-  <p></p>
+  <p>The code that I put into JavaScript didn't seem to work in the end.</p>
 
   <h3>Results</h3>
-  <p></p>
+  <p>This lab was unseccessful and wasn't able to get my code to work.</p>
 
+  <h3>Output</h3>
+
+  <p>Display "Good day!" if the hour is less than 18:00:</p>
+
+  <p id="w3">Good Evening!</p>
+
+  <script>
+  if (new Date().getHours() < 18) {
+    document.getElementById("w3").innerHTML = "Good day!";
+  }
+  </script>
+
+<div id = "output">
   </div>
 
+
+  <nav>
+     <ul>
+       <li><a href="../index.html">CST252 Homepage</a></li>
+     </nav>
+
+     </div>
   </body>
