--- a/lab15/index.html
+++ b/lab15/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta
-    <title>Lab 13: Conditonals</title>
+    <title>Lab 15: Basic Debugging</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -10,18 +10,19 @@
 
 <div id = "content">
 
-  <h1>Lab 13: Conditionals</h1>
+  <h1>Lab 15: Basic Debugging</h1>
   <p>Create functions that depends on conditionals with a partner</p>
 
   <h3>Challenges</h3>
-  <p>I had a few challenges with this lab, it was a bit confusng for me and the
-  class activity barely helped.</p>
+  <p>Since I debugged lab 13, I already knew what challenges I was facing in that
+    lab and used that to my advantge.</p>
 
   <h3>Problems</h3>
-  <p>The code that I put into JavaScript didn't seem to work in the end.</p>
+  <p>This problem with lab 13 is that the submit button wasn't giving back feedback
+    so i just used a different code that was guaranteed to work.</p>
 
   <h3>Results</h3>
-  <p>This lab was unseccessful and wasn't able to get my code to work.</p>
+  <p>Debugging the lab was sucessfull.</p>
 
   <h3>Output</h3>
 
