--- a/lab16/index.html
+++ b/lab16/index.html
@@ -8,17 +8,18 @@
     <script src="js/lab.js" defer> </script>
   </head>
   <body>
-<div id = "output">
+<div id="output">
 
   <h1>Lab 16: JavaScript Classes and Objects</h1>
   <p>Working with a partner on creating a JavaScript constructor</p>
 
   <h3>Challenges</h3>
-  <p></p>
+  <p>Since we went over this in class, I had a good understanding of the assignment.</p>
 
   <h3>Problems</h3>
-  <p></p>
+  <p>I experienced zero problems with this lab.</p>
 
   <h3>Results</h3>
-  <p></p>
+  <p>Everything came out successfully in this lab.</p>
+  </div>
   </body>
