--- a/lab16/index.html
+++ b/lab16/index.html
@@ -21,5 +21,10 @@
 
   <h3>Results</h3>
   <p>Everything came out successfully in this lab.</p>
+  
+  <nav>
+     <ul>
+       <li><a href="../index.html">CST252 Homepage</a></li>
+     </nav>
   </div>
   </body>
