--- a/lab17/index.html
+++ b/lab17/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="js/lab.js" defer</script>
+    <script src="js/lab.js" defer> </script>
   </head>
   <body>
 <div id="output">
