--- a/lab18/index.html
+++ b/lab18/index.html
@@ -7,14 +7,18 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Lab 18: Libraries and Frameworks</title>
       <link rel="stylesheet" type="text/css" href="css/lab.css">
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
       <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-      <script src="js/lab.js" defer> </script>
+      <script src="js/lab.js" defer></script>
   </head>
   <body>
     <div id="container">
 
-          <nav class="navbar navbar-expand-sm bg-light">
+      <div class="header">
+       		<h1>Lab 18: Libraries and Frameworks</h1>
+      	</div>
+          <nav class="navbar navbar-expand-sm bg-dark navbar-light justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" style="background-color:#d1cec3" href="lab15/index.html">Lab 15</a>
@@ -31,11 +35,6 @@
       </ul>
     </nav>
     <br>
-
-
-
-      <h1>Lab 18: Libraries and Frameworks</h1>
-      <p>Working with a partner on experimenting with Bootstrap</p>
 
       <h3>Challenges</h3>
       <p></p>
