--- a/lab18/index.html
+++ b/lab18/index.html
@@ -13,8 +13,7 @@
       <script src="js/lab.js" defer></script>
   </head>
   <body>
-    <div id="container">
-
+    <div class="container">
       <div class="header">
        		<h1>Lab 18: Libraries and Frameworks</h1>
       	</div>
@@ -35,16 +34,18 @@
       </ul>
     </nav>
     <br>
-
-      <h3>Challenges</h3>
-      <p></p>
-
-      <h3>Problems</h3>
-      <p></p>
-
-      <h3>Results</h3>
-      <p></p>
-
-
+      <div class="row">
+        <div class="col-sm-4">
+          <h3>Challenges</h3>
+          <p></p>
+        </div>
+        <div class="col-sm-4">
+          <h3>Problems</h3>
+          <p></p>
+        </div>
+        <div class="col-sm-4">
+          <h3>Results</h3>
+          <p></p>
+        </div>
       </div>
   </body>
