--- a/lab18/index.html
+++ b/lab18/index.html
@@ -17,7 +17,7 @@
       <div class="header">
        		<h1>Lab 18: Libraries and Frameworks</h1>
       	</div>
-          <nav class="navbar navbar-expand-sm bg-dark navbar-light justify-content-center">
+          <nav class="navbar navbar-expand-sm bg-dark navbar-light sticky-top justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" style="background-color:#d1cec3" href="lab15/index.html">Lab 15</a>
@@ -31,9 +31,55 @@
         <li class="nav-item">
           <a class="nav-link" style="background-color:#f1d0a6" href="../index.html">Homepage</a>
         </li>
+
+        <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        Dropdown link
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Link 1</a>
+        <a class="dropdown-item" href="#">Link 2</a>
+        <a class="dropdown-item" href="#">Link 3</a>
+      </div>
+    </li>
+
+          <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Link 1</a>
+          <a class="dropdown-item" href="#">Link 2</a>
+          <a class="dropdown-item" href="#">Link 3</a>
+        </div>
+      </li>
+
+          <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Link 1</a>
+          <a class="dropdown-item" href="#">Link 2</a>
+          <a class="dropdown-item" href="#">Link 3</a>
+        </div>
+      </li>
+
+          <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Link 1</a>
+          <a class="dropdown-item" href="#">Link 2</a>
+          <a class="dropdown-item" href="#">Link 3</a>
+        </div>
+      </li>
       </ul>
     </nav>
     <br>
+
+
       <div class="row">
         <div class="col-sm-4">
           <h3>Challenges</h3>
