--- a/lab18/index.html
+++ b/lab18/index.html
@@ -20,65 +20,60 @@
           <nav class="navbar navbar-expand-sm bg-dark navbar-light sticky-top justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" style="background-color:#d1cec3" href="lab15/index.html">Lab 15</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="background-color:#ffcd85" href="lab16/index.html">Lab 16</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="background-color:#f9f5a2" href="lab17/index.html">Lab 17</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" style="background-color:#f1d0a6" href="../index.html">Homepage</a>
         </li>
 
         <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Dropdown link
+      <a class="nav-link dropdown-toggle" style="background-color:#d1cec3" href="#" id="navbardrop" data-toggle="dropdown">
+        Dropdown Labs
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item" href="lab1/index.html">Lab 1</a>
+        <a class="dropdown-item" href="lab2/index.html">Lab 2</a>
+        <a class="dropdown-item" href="lab3/index.html">Lab 3</a>
+        <a class="dropdown-item" href="lab4/index.html">Lab 4</a>
       </div>
     </li>
 
           <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-          Dropdown link
+        <a class="nav-link dropdown-toggle" style="background-color:#ffcd85" href="#" id="navbardrop" data-toggle="dropdown">
+          Dropdown Labs
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Link 1</a>
-          <a class="dropdown-item" href="#">Link 2</a>
-          <a class="dropdown-item" href="#">Link 3</a>
+          <a class="dropdown-item" href="lab4/index.html">Lab 5</a>
+          <a class="dropdown-item" href="lab5/index.html">Lab 6</a>
+          <a class="dropdown-item" href="lab6/index.html">Lab 7</a>
+          <a class="dropdown-item" href="lab6/index.html">Lab 8</a>
         </div>
       </li>
 
           <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-          Dropdown link
+        <a class="nav-link dropdown-toggle" style="background-color:#f9f5a2" href="#" id="navbardrop" data-toggle="dropdown">
+          Dropdown Labs
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Link 1</a>
-          <a class="dropdown-item" href="#">Link 2</a>
-          <a class="dropdown-item" href="#">Link 3</a>
+          <a class="dropdown-item" href="#">Lab 9</a>
+          <a class="dropdown-item" href="#">Lab 10</a>
+          <a class="dropdown-item" href="#">Lab 11</a>
+          <a class="dropdown-item" href="#">Lab 12</a>
         </div>
       </li>
 
           <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-          Dropdown link
+        <a class="nav-link dropdown-toggle" style="background-color:#f1d0a6" href="#" id="navbardrop" data-toggle="dropdown">
+          Dropdown Labs
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Link 1</a>
-          <a class="dropdown-item" href="#">Link 2</a>
-          <a class="dropdown-item" href="#">Link 3</a>
+          <a class="dropdown-item" href="#">Link 13</a>
+          <a class="dropdown-item" href="#">Link 14</a>
+          <a class="dropdown-item" href="#">Link 15</a>
+          <a class="dropdown-item" href="#">Link 16</a>
+          <a class="dropdown-item" href="#">Link 17</a>
         </div>
       </li>
       </ul>
     </nav>
     <br>
-
 
       <div class="row">
         <div class="col-sm-4">
