--- a/lab18/index.html
+++ b/lab18/index.html
@@ -13,6 +13,7 @@
       <script src="js/lab.js" defer></script>
   </head>
   <body>
+    <main>
     <div class="container">
       <div class="header">
        		<h1>Lab 18: Libraries and Frameworks</h1>
@@ -40,10 +41,10 @@
           Dropdown Labs
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="lab4/index.html">Lab 5</a>
-          <a class="dropdown-item" href="lab5/index.html">Lab 6</a>
-          <a class="dropdown-item" href="lab6/index.html">Lab 7</a>
-          <a class="dropdown-item" href="lab6/index.html">Lab 8</a>
+          <a class="dropdown-item" href="lab5/index.html">Lab 5</a>
+          <a class="dropdown-item" href="lab6/index.html">Lab 6</a>
+          <a class="dropdown-item" href="lab7/index.html">Lab 7</a>
+          <a class="dropdown-item" href="lab8/index.html">Lab 8</a>
         </div>
       </li>
 
@@ -52,10 +53,10 @@
           Dropdown Labs
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Lab 9</a>
-          <a class="dropdown-item" href="#">Lab 10</a>
-          <a class="dropdown-item" href="#">Lab 11</a>
-          <a class="dropdown-item" href="#">Lab 12</a>
+          <a class="dropdown-item" href="lab9/index.html">Lab 9</a>
+          <a class="dropdown-item" href="lab10/index.html">Lab 10</a>
+          <a class="dropdown-item" href="lab11/index.html">Lab 11</a>
+          <a class="dropdown-item" href="lab12/index.html">Lab 12</a>
         </div>
       </li>
 
@@ -64,11 +65,11 @@
           Dropdown Labs
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Link 13</a>
-          <a class="dropdown-item" href="#">Link 14</a>
-          <a class="dropdown-item" href="#">Link 15</a>
-          <a class="dropdown-item" href="#">Link 16</a>
-          <a class="dropdown-item" href="#">Link 17</a>
+          <a class="dropdown-item" href="lab13/index.html">Lab 13</a>
+          <a class="dropdown-item" href="lab14/index.html">Lab14</a>
+          <a class="dropdown-item" href="lab15/index.html">Lab 15</a>
+          <a class="dropdown-item" href="lab16/index.html">Lab 16</a>
+          <a class="dropdown-item" href="lab17index.html">Lab 17</a>
         </div>
       </li>
       </ul>
@@ -78,15 +79,36 @@
       <div class="row">
         <div class="col-sm-4">
           <h3>Challenges</h3>
-          <p></p>
+          <p>The only challnge I faced in this lab was getting th links to
+          work on my past labs.
+        </p>
+        <p> I was able to only get my homeoage link to work in this lab. I went
+          into the console to see the issue and it seems that the local resorce
+          of the lab was not allowed on my page.
+        </p>
+        <p>Since I never ran into this problem before, I am unsure on how to fix
+          this issue on my page.
+        </p>
+        <p>I will try to fix this issue later on just incase I have a problem
+          like this in a future lab.
+        </p>
+
         </div>
         <div class="col-sm-4">
           <h3>Problems</h3>
-          <p></p>
+          <p>I was not able to figure out why my links were not working for the
+          other labs.</p>
         </div>
         <div class="col-sm-4">
           <h3>Results</h3>
-          <p></p>
+          <p>The layout was successfull other than the links but everything came
+          out really good.</p>
         </div>
       </div>
+      <div class="container">
+      <div class="footer" style="margin-bottom:0">
+          <p>CST 252</p>
+      </div>
+    </div>
+    </main>
   </body>
