--- a/lab19/index.html
+++ b/lab19/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lab 18: Libraries and Frameworks</title>
+    <title>Lab 19: AJAX</title>
       <link rel="stylesheet" type="text/css" href="css/lab.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
       <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script src="js/lab.js" defer></script>
   </head>
   <body>
-    <div class="content">
+    <div id="output">
+          <h1>Lab 19: AJAX</h1>
+          <p>Experimenting with jQuery and AJAX with a partner.</p>
 
           <h3>Challenges</h3>
           <p></p>
 
-          <h3>
+          <h3>Problems</h3>
+          <p></p>
+
+          <h3>Results</h3>
+          <p></p>
+        </div>
 
 
 
