--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,42 +8,72 @@
     <script src="js/lab.js" defer></script>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <main>
-      <div class="container-fluid p-3 bg-black text-white text-center">
-          <h1></h1>
-          <p>I dont know what to put here yet</p>
-          <div class="container mt-3 text-center">
-              <ul class="nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-              </ul>
+      <div class="about-section">
+        <h1>About Us Page</h1>
+        <p>Some text about who we are and what we do.</p>
+        <p>Resize the browser window to see that this page is responsive by the way.</p>
+      </div>
+
+      <h2 style="text-align:center">Our Team</h2>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+            <div class="container">
+              <h2>Jane Doe</h2>
+              <p class="title">CEO & Founder</p>
+              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>jane@example.com</p>
+              <p><button class="button">Contact</button></p>
             </div>
-                    </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+            <div class="container">
+              <h2>Mike Ross</h2>
+              <p class="title">Art Director</p>
+              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>mike@example.com</p>
+              <p><button class="button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+            <div class="container">
+              <h2>John Doe</h2>
+              <p class="title">Designer</p>
+              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>john@example.com</p>
+              <p><button class="button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
       <section class="container">
         <!-- title -->
-        <div class="title">
-          <h2>our reviews</h2>
+     <div class="title">
+          <h2>our 12 zodiac signs</h2>
           <div class="underline"></div>
         </div>
         <!-- review -->
-        <article class="review">
+     <article class="zodiac">
           <div class="img-container">
-            <img src="constellation-1.jpeg" id="constellation-img" alt="" />
+            <img src="zodiac-1.jpeg" id="zodiac-im" alt="" />
           </div>
-          <h4 id="author">(insert constellation name here)</h4>
+          <h4 id="name">(insert zodiac sign name here)</h4>
           <p id="classification">(insert nickname or classification here)</p>
           <p id="info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
@@ -59,8 +89,9 @@
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
+
           <!-- random button -->
-          <button class="random-btn">surprise me</button>
+        <button class="random-btn">surprise me</button>
         </article>
       </section>
   </body>
