--- a/midterm/index.html
+++ b/midterm/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/lab.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="js/lab.js" defer></script>
     </head>
@@ -170,14 +170,14 @@
       </div>
     </body>
 
-    <section class="container">
+  <!---  <section class="container">
        <!-- title -->
-       <div class="title">
+      <!--- <div class="title">
          <h2>our reviews</h2>
          <div class="underline"></div>
        </div>
        <!-- review -->
-       <article class="review">
+      <!--- <article class="review">
          <div class="img-container">
            <img src="constellation-1.jpeg" id="constellation-img" alt="" />
          </div>
@@ -189,7 +189,7 @@
            Iste, doloremque nihil?
          </p>
          <!-- prev next buttons-->
-         <div class="button-container">
+        <!--- <div class="button-container">
            <button class="prev-btn">
              <i class="fas fa-chevron-left"></i>
            </button>
@@ -198,7 +198,7 @@
            </button>
          </div>
          <!-- random button -->
-         <button class="random-btn">surprise me</button>
+         <!---<button class="random-btn">surprise me</button>
        </article>
      </section>
  </body>
