--- a/midterm/index.html
+++ b/midterm/index.html
@@ -30,6 +30,7 @@
                   </linearGradient>
                 </defs>
               <img src="img/aries.png" alt="Jane" style="width:100%">
+              <img class="aries">
               <div class="container">
                 <h2>Aries</h2>
                 <p class="title">MAR 21 - APR 19</p>
@@ -198,7 +199,7 @@
            </button>
          </div>
          <!-- random button -->
-         <!---<button class="random-btn">surprise me</button>
+         <<button class="random-btn">surprise me</button>
        </article>
      </section>
  </body>
