--- a/midterm/index.html
+++ b/midterm/index.html
@@ -161,13 +161,13 @@
               <div class="container">
                 <h2>Pisces</h2>
                 <p class="title">Feb 19 - Mar 20</p>
-                <p><button class="button">Traits</button></p>
+                  <p><button class="button" href="../index.html">Traits</button></p>
               </div>
           </div>
         </div>
       </main>
             <div class="footer">
-        <h2>Footer</h2>
+        <h2>Group 3</h2>
       </div>
     </body>
 
@@ -199,7 +199,7 @@
            </button>
          </div>
          <!-- random button -->
-         <<button class="random-btn">surprise me</button>
+         <!--<<button class="random-btn">surprise me</button>
        </article>
      </section>
  </body>
