--- a/midterm/index.html
+++ b/midterm/index.html
@@ -19,7 +19,7 @@
             <a href="#contact">Horoscopes</a>
             <a href="#about">About</a>
           </div>
-        <h2 style="text-align:center">What Sign Are You?</h2>
+        <h3 style="text-align:center">What Sign Are You?</h3>
         <div class="row">
           <div class="column">
             <div class="card">
@@ -34,7 +34,13 @@
               <div class="container">
                 <h2>Aries</h2>
                 <p class="title">MAR 21 - APR 19</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -45,7 +51,13 @@
               <div class="container">
                 <h2>Taurus</h2>
                 <p class="title">APR 20 - MAY 20</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -56,7 +68,13 @@
               <div class="container">
                 <h2>Gemini</h2>
                 <p class="title">MAY 21 - JUN 20</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
           </div>
         </div>
@@ -69,7 +87,13 @@
               <div class="container">
                 <h2>Cancer</h2>
                 <p class="title">JUN 21 - JUL 22</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -80,7 +104,13 @@
               <div class="container">
                 <h2>Leo</h2>
                 <p class="title">JUL 23 - AUG 22</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -91,7 +121,13 @@
               <div class="container">
                 <h2>Virgo</h2>
                 <p class="title">AUG 23 - SEP 22</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
           </div>
         </div>
@@ -104,7 +140,13 @@
               <div class="container">
                 <h2>Libra</h2>
                 <p class="title">SEP 23 - OCT 22</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -115,7 +157,13 @@
               <div class="container">
                 <h2>Scorpio</h2>
                 <p class="title">OCT 23 - NOV 21</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -126,7 +174,13 @@
               <div class="container">
                 <h2>Sagittarius</h2>
                 <p class="title">NOV 22 - DEC 21</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
           </div>
         </div>
@@ -139,7 +193,13 @@
               <div class="container">
                 <h2>Capricorn</h2>
                 <p class="title">DEC 22 - JAN 19</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -150,7 +210,13 @@
               <div class="container">
                 <h2>Aquarius</h2>
                 <p class="title">JAN 20 - FEB 18</p>
-                <p><button class="button">Traits</button></p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="moda;-content">
+                      <span class="close">&times;</span>
+                      <h4>here i am</h4>
+                      </div>
+                    </div>
               </div>
             </div>
           </div>
@@ -161,7 +227,12 @@
               <div class="container">
                 <h2>Pisces</h2>
                 <p class="title">Feb 19 - Mar 20</p>
-                  <p><button class="button" href="../index.html">Traits</button></p>
+                  <p><button id="myBtn">Traits</button></p>
+                    <div id="myModal" class="modal">
+                      <div class="moda;-content">
+                        <span class="close">&times;</span>
+                        <h4>here i am</h4>
+                      </div>
               </div>
           </div>
         </div>
