--- a/midterm/index.html
+++ b/midterm/index.html
@@ -23,12 +23,6 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <defs>
-                  <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-                    <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
-                    <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
-                  </linearGradient>
-                </defs>
               <img src="img/aries.png" alt="Jane" style="width:100%">
               <img class="aries">
               <div class="container">
@@ -36,7 +30,7 @@
                 <p class="title">MAR 21 - APR 19</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -53,7 +47,7 @@
                 <p class="title">APR 20 - MAY 20</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -70,7 +64,7 @@
                 <p class="title">MAY 21 - JUN 20</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -89,7 +83,7 @@
                 <p class="title">JUN 21 - JUL 22</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -106,7 +100,7 @@
                 <p class="title">JUL 23 - AUG 22</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -123,7 +117,7 @@
                 <p class="title">AUG 23 - SEP 22</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -142,7 +136,7 @@
                 <p class="title">SEP 23 - OCT 22</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -159,7 +153,7 @@
                 <p class="title">OCT 23 - NOV 21</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -176,7 +170,7 @@
                 <p class="title">NOV 22 - DEC 21</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -195,7 +189,7 @@
                 <p class="title">DEC 22 - JAN 19</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -212,7 +206,7 @@
                 <p class="title">JAN 20 - FEB 18</p>
                 <p><button id="myBtn">Traits</button></p>
                   <div id="myModal" class="modal">
-                    <div class="moda;-content">
+                    <div class="modal-content">
                       <span class="close">&times;</span>
                       <h4>here i am</h4>
                       </div>
@@ -229,7 +223,7 @@
                 <p class="title">Feb 19 - Mar 20</p>
                   <p><button id="myBtn">Traits</button></p>
                     <div id="myModal" class="modal">
-                      <div class="moda;-content">
+                      <div class="modal-content">
                         <span class="close">&times;</span>
                         <h4>here i am</h4>
                       </div>
