--- a/midterm/index.html
+++ b/midterm/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <div class="header">
-        <h1 class="glow">Astronomy</h1>
+        <h1 class="glow">Astrology</h1>
       </div>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
@@ -45,13 +45,7 @@
               <div class="container">
                 <h2>Taurus</h2>
                 <p class="title">APR 20 - MAY 20</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -62,13 +56,7 @@
               <div class="container">
                 <h2>Gemini</h2>
                 <p class="title">MAY 21 - JUN 20</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
           </div>
         </div>
@@ -81,13 +69,7 @@
               <div class="container">
                 <h2>Cancer</h2>
                 <p class="title">JUN 21 - JUL 22</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -98,13 +80,7 @@
               <div class="container">
                 <h2>Leo</h2>
                 <p class="title">JUL 23 - AUG 22</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -115,13 +91,7 @@
               <div class="container">
                 <h2>Virgo</h2>
                 <p class="title">AUG 23 - SEP 22</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
           </div>
         </div>
@@ -134,13 +104,7 @@
               <div class="container">
                 <h2>Libra</h2>
                 <p class="title">SEP 23 - OCT 22</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -151,13 +115,7 @@
               <div class="container">
                 <h2>Scorpio</h2>
                 <p class="title">OCT 23 - NOV 21</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -168,13 +126,7 @@
               <div class="container">
                 <h2>Sagittarius</h2>
                 <p class="title">NOV 22 - DEC 21</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
           </div>
         </div>
@@ -187,13 +139,7 @@
               <div class="container">
                 <h2>Capricorn</h2>
                 <p class="title">DEC 22 - JAN 19</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -204,13 +150,7 @@
               <div class="container">
                 <h2>Aquarius</h2>
                 <p class="title">JAN 20 - FEB 18</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                      <h4>here i am</h4>
-                      </div>
-                    </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
               </div>
             </div>
           </div>
@@ -221,15 +161,10 @@
               <div class="container">
                 <h2>Pisces</h2>
                 <p class="title">Feb 19 - Mar 20</p>
-                  <p><button id="myBtn">Traits</button></p>
-                    <div id="myModal" class="modal">
-                      <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <h4>here i am</h4>
-                      </div>
-              </div>
+                <p><button onclick="alert('Hello\nHow are you?')">Traits</button></p>
           </div>
         </div>
+      </div>
       </main>
             <div class="footer">
         <h2>Group 3</h2>
